src/test/ui/type/type-check/cannot_infer_local_or_vec_in_tuples.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot_infer_local_or_vec_in_tuples.rs:2:18
   |
LL |     let (x, ) = (vec![], );
   |                  ^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Vec`
   |
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider specifying the generic argument
  --> $SRC_DIR/alloc/src/macros.rs:LL:COL
   |
LL |         $crate::__rust_force_expr!($crate::vec::Vec::<T>::new())
   |                                                    +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
